--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/plotly.js": "^1.44.33",
     "core-js": "^3.6.4",
-    "plotly.js-dist": "^1.52.3",
+    "marked": "^0.8.1",
+    "plotly.js": "^1.52.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.3.0",
+    "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
+    "@types/marked": "^0.7.3",
+    "@types/plotly.js": "^1.44.33",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -27,6 +29,7 @@
     "@vue/eslint-config-typescript": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "raw-loader": "^4.0.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.5",
