--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -3,6 +3,8 @@ name: Automated data update
 on:
   schedule:
     - cron:  '0 03 * * *'
+  push:
+    branches: [ master ]
 
 jobs:
   update:
@@ -12,7 +14,7 @@ jobs:
     - name: Scrape and build data
       uses: actions/setup-python@v1
       with:
-        python-version: '3.6.10'
+        python-version: '3.6'
         architecture: x64
     - run: |
         pip install numpy pandas plotly requests
